<resources>
    <string name="app_name">DDD 출석체크</string>

    <!--로그인 화면-->
    <string name="login_special_title">반가워요 회원님</string>
    <string name="login_middle_title">디디디 출석체크 앱입니다.</string>
    <string name="login_bottom_title">오신걸 환영합니다.</string>
    <string name="login_input_id_hint">아이디를 입력해주세요.</string>
    <string name="login_input_pw_hint">비밀번호를 입력해주세요.</string>
    <string name="login">로그인</string>

    <!--출석체크 화면-->
    <string name="attendance_admin_start_title">출석체크를 시작해주세요</string>
    <string name="attendance_admin_guide_top">라운드에 나오는 숫자를 멤버들에게 알려주셔야</string>
    <string name="attendance_admin_guide_bottom">멤버분들이 출석 체크가 가능합니다.</string>
    <string name="attendance">출석체크</string>
    <string name="attendance_start">출석시작</string>
    <string name="attendance_end">출석종료</string>
    <string name="attendance_input_explanation">번호 입력해주세요</string>
    <string name="attendance_guide_top">라운드에 번호를 입력해주셔야 출석 체크 버튼이</string>
    <string name="attendance_guide_bottom">활성화가 되어 출석 체크가 가능합니다.</string>
    <string name="attendance_dialog_already">이미 출석체크가\n되었습니다.</string>
    <string name="attendance_dialog_ok">확인하였습니다.</string>
</resources>
